post: add ban menu; various

--- a/src/ui/app/stylesheet.styl
+++ b/src/ui/app/stylesheet.styl
@@ -61,9 +61,10 @@ pre
 
 // Theme
 body
-	--c-op cornflowerblue
+	--c-op #87b3eb
 	--c-admin orangered
 	--c-mod darkseagreen
+	--c-score-0 #e3e6eb
 	--c-score-1 lightgoldenrodyellow
 	--c-score-2 wheat
 	--c-score-3 lightsalmon
@@ -202,13 +203,7 @@ blockquote
 	& > :last-child
 		margin-bottom 0
 code
-	background var(--c-con-normal)
-	border-radius 2px
-	padding 1px 2px
 	word-break break-all
-	pre > &
-		background none
-		padding 0
 pre
 	background var(--c-con-normal)
 	border 1px solid transparent
