--- a/src/ui/common/FormattedHTML.pug
+++ b/src/ui/common/FormattedHTML.pug
@@ -6,6 +6,6 @@ script.
 		html
 			.replace(/<a href="https?:\/\/redd\.it\/(?<path>[^"]*)"[^>]*>/g, '<a href="/post/$<path>">')
 			.replace(/<a href="https?:\/\/(?:(?:new|np|old|www)\.)?reddit\.com\/(?<path>[^"]*)"[^>]*>/g, '<a href="/$<path>">')
-			.replace(/<a href="https:\/\/(?<subdomain>preview)\.redd\.it\/(?<filepath>[^"]+)">(?<linktext>[^<]*)<\/a>/g, '<a href="https://$<subdomain>.redd.it/$<filepath>" target="_blank"><img src="https://$<subdomain>.redd.it/$<filepath>"></a>')
+			.replace(/<a href="https:\/\/(?<subdomain>preview)\.redd\.it\/(?<filepath>[^"]+)">(?<linktext>[^<]*)<\/a>/g, '<a href="https://$<subdomain>.redd.it/$<filepath>" target="_blank"><img decoding="async" loading="eager" src="https://$<subdomain>.redd.it/$<filepath>"></a>')
 
 {@html formatted}
