--- a/src/ui/feature/comment/Comment.pug
+++ b/src/ui/feature/comment/Comment.pug
@@ -49,7 +49,7 @@ script.
 					when Math.log10(comment.score) > 0 then 'var(--c-score-1)'
 					else score_default_color
 				score_text = switch
-					when comment.pinned then 'Pin'
+					when comment.stickied then 'Pin'
 					when comment.score_hidden then score_default_text
 					when !Number.isFinite(comment.score) then score_default_text
 					else comment.score
@@ -134,7 +134,7 @@ script.
 				button.comment-score(on:contextmenu={e => e.preventDefault()} on:mousedown={e => interact('vote', { current_vote: comment.likes === true ? 1 : comment.likes === false ? -1 : 0, mouse_button_number: e.button })} style='background: {score_color}; color: {score_text_color}') {score_text}
 			{:else}
 				data.comment-score(style='background: {score_color}; color: {score_text_color}') {score_text}
-			section.comment-body(data-can-edit={comment.author === api.getUser() || null} data-can-mod={comment.can_mod_post || null} data-distinguish={comment.distinguished || null} data-pinned={comment.pinned || null} data-radial-menu='comment' data-saved={comment.saved || null} on:radialmenu={e => interact(e.detail)})
+			section.comment-body(data-can-edit={comment.author === api.getUser() || null} data-can-mod={comment.can_mod_post || null} data-distinguish={comment.distinguished || null} data-pinned={comment.stickied || null} data-radial-menu='comment' data-saved={comment.saved || null} on:radialmenu={e => interact(e.detail)})
 				FormattedHTML(html={comment.body_html})
 			aside.comment-user-info
 				UserByline(distinguish={comment.distinguished || (comment.is_submitter && 'submitter')} flair_color={comment.author_flair_background_color} flair_rich_text={comment.author_flair_richtext} flair_text={comment.author_flair_text} name={comment.author})
