--- a/src/ui/feature/user/User.pug
+++ b/src/ui/feature/user/User.pug
@@ -15,9 +15,12 @@ script.
 	tabs = [
 		{ label: 'Comments', value: 'comments'}
 		{ label: 'Posts', value: 'posts'}
-		{ label: '', value: ''}
-		{ label: '', value: ''}
-		{ label: '', value: ''}
+	]
+	tabs_account = [
+		{ label: 'Comments', value: 'comments'}
+		{ label: 'Posts', value: 'posts'}
+		{ label: 'Saved', value: 'saved'}
+		{ label: 'Messages', value: 'messages'}
 	]
 	
 	trophies = null
@@ -46,7 +49,7 @@ svelte:head
 		{:else if user.is_blocked}
 			.user-unavailable-notice You blocked this user.
 		{:else}
-			ButtonGroup(action={value => tab = value} options={tabs} selected={tab})
+			ButtonGroup(action={value => tab = value} options={api.getUser() === name ? tabs_account : tabs} selected={tab})
 			{#if tab === 'comments'}
 				{#key sort}
 					{#key time_range}
@@ -55,6 +58,11 @@ svelte:head
 				{#key sort}
 					{#key time_range}
 						Feed(sort={sort} time_range={time_range} type='user_posts' user_name={name})
+			{:else if tab === 'saved'}
+				Feed(type='account_saved_comments' user_name={name})
+				Feed(type='account_saved_posts' user_name={name})
+			{:else if tab === 'messages'}
+				Feed(type='account_messages' user_name={name})
 
 style.
 	.user
