--- a/src/ui/feature/message/Message.pug
+++ b/src/ui/feature/message/Message.pug
@@ -1,10 +1,37 @@
 script.
 	import api from '../../../api/index.js'
 	
+	import CommentEditor from '../comment/CommentEditor.pug'
 	import FormattedHTML from '../../common/FormattedHTML.pug'
-	import UserAvatar from '../../feature/user/UserAvatar.pug'
+	import Popup from '../../common/Popup.pug'
+	import ReportMenu from '../menu/ReportMenu.pug'
+	import UserAvatar from '../user/UserAvatar.pug'
 
 	export message = null
+
+	replying = false
+	reply_error = null
+	reply_sending = false
+	reply_succeeded = false
+	reporting = false
+
+	interact = (action_type, data) ->
+		switch action_type
+			when 'reply'
+				replying = true
+			when 'reply_finish'
+				api.submit(api.ID('message_reply', message.id), { text: data.text }, (status) ->
+					reply_error = status.error
+					reply_sending = status.sending
+					if status.success
+						replying = false
+						reply_succeeded = true
+				)
+			when 'report'
+				reporting = true
+			when 'report_finish'
+				api.submit(api.ID('message_report', message.id), { violation_reason: data.violation_reason })
+				reporting = false
 
 {#if message}
 	article.message
@@ -12,7 +39,15 @@ script.
 			address.message-author
 				UserAvatar(name={message.author})
 			strong.message-subject {message.subject}
-		FormattedHTML(html={message.body_html})
+		section.message-body(data-radial-menu='message' on:radialmenu={e => interact(e.detail)})
+			FormattedHTML(html={message.body_html})
+		{#if replying}
+			CommentEditor(error={reply_error} on:submit={e => interact('reply_finish', { text: e.detail })} sending={reply_sending})
+		{:else if reply_succeeded}
+			p.message-reply-succeeded ✅ Reply sent
+		{#if reporting}
+			Popup(on:close={() => reporting = false})
+				ReportMenu(on:submit={e => interact('report_finish', { violation_reason: e.detail })} subreddit_name='reddit.com' target_type='message')
 
 style.
 	.message
@@ -31,3 +66,5 @@ style.
 		align-items flex-end
 		display flex
 		gap 6px
+	.message-reply-succeeded
+		color var(--c-text-weak)
