post: make highlighted comment outline look better

--- a/src/ui/feature/comment/Comment.pug
+++ b/src/ui/feature/comment/Comment.pug
@@ -175,14 +175,13 @@ style.
 		position relative
 	.comment-body
 		border-radius 12px
-		color var(--c-subreddit-theme-text)
 		display inline-block
 		padding 12px
 		.comment-deleted > &
 			opacity 0.25
 			pointer-events none
 		.comment-highlighted > &
-			outline 1px solid
+			outline 1px solid wheat
 		.comment-with-low-score:not(.comment-deleted) > &
 			opacity 0.5
 		:global(& img)
